WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114219
window.internals.repaintRectsAsText() is hard to use because it doesn't force layout
https://bugs.webkit.org/show_bug.cgi?id=114219
Summary
window.internals.repaintRectsAsText() is hard to use because it doesn't force...
Simon Fraser (smfr)
Reported
2013-04-08 15:17:10 PDT
It's hard to use window.internals.repaintRectsAsText() in a test, because you don't know whether the repaints happened yet or not. I think window.internals.repaintRectsAsText() should force layout to get around this.
Attachments
Patch
(2.08 KB, patch)
2013-04-08 15:20 PDT
,
Simon Fraser (smfr)
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-04-08 15:20:49 PDT
Created
attachment 196960
[details]
Patch
Simon Fraser (smfr)
Comment 2
2013-04-09 13:51:58 PDT
https://trac.webkit.org/r148048
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug