window.internals.repaintRectsAsText() is hard to use because it doesn't force layout https://bugs.webkit.org/show_bug.cgi?id=114219

Reviewed by Beth Dakin.

Force layout when setTracksRepaints() is set to true, to flush out any pending
repaints from a layout that hasn't happened yet. Also force layout in
trackedRepaintRectsAsText(), so that any pending layout happpens and thus
repaints.

* page/FrameView.cpp:
(WebCore::FrameView::setTracksRepaints):
(WebCore::FrameView::trackedRepaintRectsAsText):

Canonical link: https://commits.webkit.org/132669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148048 268f45cc-cd09-0410-ab3c-d52691b4dbfc